<resources>
    <string name="app_name">Heropedia</string>
    <string name="here_superhero_image">Here Superhero Image</string>
    <string name="here_superhero_name">Here Superhero Name</string>
    <string name="here_superhero_image_large">Here SuperHero Image Large</string>
    <string name="intelligence">Intelligence</string>
    <string name="intelligence_value">Intelligence Value</string>
    <string name="hero_name_detail_here">Hero Name Detail Here</string>
    <string name="powstat">PowStat</string>
    <string name="appear">Appear</string>
    <string name="bio">Bio</string>
    <string name="other">Other</string>
    <string name="good_or_bad">Good or Bad</string>
    <string name="universe">Universe</string>
    <string name="powstats">PowStats</string>
    <string name="appearance">Appearance</string>
    <string name="heigth">Heigth</string>
    <string name="heigth_value">Heigth Value</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_here">Full Name Here</string>
    <string name="work">Work</string>
    <string name="hero_work_here">Hero Work Here</string>
    <string name="powerstats">POWERSTATS</string>
    <string name="strength">Strength</string>
    <string name="strength_value_here">Strength Value Here</string>
    <string name="speed">Speed</string>
    <string name="speed_value_here">Speed Value Here</string>
    <string name="durability">Durability</string>
    <string name="durability_value_here">Durability Value Here</string>
    <string name="power">Power</string>
    <string name="power_value_here">Power Value Here</string>
    <string name="combat">Combat</string>
    <string name="combat_value_here">Combat Value Here</string>
    <string name="weight">Weight</string>
    <string name="weightvalue">WeightValue</string>
    <string name="gender">Gender</string>
    <string name="gender_value">Gender Value</string>
    <string name="race">Race</string>
    <string name="race_value">Race Value</string>
    <string name="eyes">Eyes</string>
    <string name="eyes_value">Eyes Value</string>
    <string name="hair">Hair</string>
    <string name="hair_value">Hair Value</string>
    <string name="alter_egos">Alter Egos</string>
    <string name="alter_egos_here">Alter Egos Here</string>
    <string name="aliases">Aliases</string>
    <string name="textview">TextView</string>
    <string name="aliases_value_here">Aliases Value Here</string>
    <string name="born_in">Born In</string>
    <string name="place_of_birth_here">Place of Birth Here</string>
    <string name="appeared_first_in">Appeared first in</string>
    <string name="appeared_first_value_here">Appeared First Value Here</string>
    <string name="alingment_detail_here">Alingment Detail Here</string>
    <string name="publisher_here">Publisher Here</string>
    <string name="base">Base</string>
    <string name="base_value_here">Base Value Here</string>
    <string name="group_affiliation">Group Affiliation</string>
    <string name="group_affiliation_value_here">Group Affiliation Value Here</string>
    <string name="relatives">Relatives</string>
    <string name="relatives_value_here">Relatives Value Here</string>

</resources>