<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:text="@string/full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_full_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/full_name_here"
        app:layout_constraintStart_toEndOf="@+id/tv_full_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_alter_egos_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/alter_egos"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_full_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

    <TextView
        android:id="@+id/tv_alter_egos_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/alter_egos_here"
        app:layout_constraintStart_toStartOf="@+id/tv_full_name_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name_value" />

    <TextView
        android:id="@+id/tv_aliases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aliases"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_alter_egos_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_alter_egos_label" />

    <TextView
        android:id="@+id/tv_aliases_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/aliases_value_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_aliases"
        app:layout_constraintTop_toBottomOf="@+id/tv_aliases" />

    <TextView
        android:id="@+id/tv_place_of_birth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/born_in"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_aliases"
        app:layout_constraintTop_toBottomOf="@+id/tv_aliases_value" />

    <TextView
        android:id="@+id/tv_place_of_birth_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_of_birth_here"
        app:layout_constraintStart_toStartOf="@+id/tv_place_of_birth_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_place_of_birth_label" />

    <TextView
        android:id="@+id/tv_first_appareance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/appeared_first_in"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_place_of_birth_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_place_of_birth_value" />

    <TextView
        android:id="@+id/tv_first_appearance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/appeared_first_value_here"
        app:layout_constraintStart_toStartOf="@+id/tv_first_appareance"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_appareance" />

</androidx.constraintlayout.widget.ConstraintLayout>